# deepstreamObjectTrackJetson

./: CMakeLists.txt  main.cpp  observerPython.py  readMe.txt  speedControl.py
cfg/: NvDsDataStructure.txt  carColor_config.txt  carMake_config.txt  carType_config.txt  config_infer_primary_yolor.txt  config_infer_primary_yolov7.txt  config_nvdsanalytics.txt  config_tracker_NvDCF_perf.yml  ds_tiny_yolo_v2.txt  plate_detection.txt  text_recognition.txt  tracker_config.txt
include/: calculateSpeed.cpp  calculateSpeed.h  configurations.cpp  configurations.h  ds_speed.cpp  ds_speed.h  dsanalytics.cpp  dsanalytics.h  message_handler.cpp  message_handler.h  metadata.cpp  metadata.h  post_processing.cpp  post_processing.h  rtsp_source_version.txt  utils.cpp  utils.h
